examples/type_system/failing/123_array_missing_close_bracket.flx
let xs = [|1, 2|
let after = 3
